--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "kak-fiziks",
+  "name": "fiziks",
   "private": false,
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "A simple physics engine using Verlet integration writen by me from scratch",
-  "main": "index.ts",
+  "main": "main.ts",
   "module": "index.ts",
   "license": "MIT",
   "author": "skudunter",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
